# 2023-01-30-imgui-barebone-mac

./: CMakeLists.txt  main.cpp  readme.md
cmake/: find_opencv_and_torch.cmake
config/: CMakeLists.txt  cmake_install.cmake
config/include/config/: global.h
imgui/: CMakeLists.txt  cmake_install.cmake  imgui_impl_sdl.cpp  imguipp.cpp  imguipp.h  menu.cpp  menu.h  settings.h
mongoose/: CMakeLists.txt  MongooseConfig.cmake  MongooseConfig.cmake.in  cmake_install.cmake
utils/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
utils/include/utils/: capture_utils.h  common.h  get_file_next_digit.h  list_dir.h  register_protocol.h  split.h  web_utils.h  win_reg.h
utils/src/: CMakeLists.txt  Makefile  cmake_install.cmake
utils/src/utils/: capture_utils.cpp  common.cpp  get_file_next_digit.cpp  list_dir.cpp  register_protocol.cpp  split.cpp  web_utils.cpp  web_utils001.cpp
